--- a/src/app/form-upload/form-upload.component.html
+++ b/src/app/form-upload/form-upload.component.html
@@ -1,13 +1,13 @@
-<div style="height:150px;"></div>
+<div style="height:100px;"></div>
 <div>
-    
+
     <!-- just to make scrolling effect possible -->
     <div class="wrapperhead" style="padding-top: 50px;">
         <div class="wrapper">
-            <div *ngIf="parent!=undefined"> 
+            <div *ngIf="parent!=undefined" class="text-center">
                 <h5>Current directory: {{ parent }} </h5>
             </div>
-            
+
             <p class="uploadlabel" *ngIf="parent!=undefined" style='margin-bottom:20px; text-align: center; color:#1a1aff; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>Upload Files</p>
             <div class="text-center" *ngIf="parent!=undefined">
                 <input type="file" id="file" (change)="selectFile($event)" multiple />
@@ -20,6 +20,7 @@
 
     </div>
 </div>
+<div style="height: 50px;"></div>
 
 <!-- Jquery needed -->
 
