--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,6 +17,11 @@
 <div style="height: 80px; "></div>
 <section class="home">
 
+
+    <video autoplay muted loop id="myVideo">
+  <source src="rain.mp4" type="video/mp4">
+
+</video>
 </section>
 
 <div class="footer" style="width:100%; height: 300px;margin-bottom: 0px;">
