--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,16 +14,13 @@
     </div>
 </div>
 <p class="platform">Platform You'll Ever Need</p>
-<div style="height: 80px; "></div>
-<section class="home">
 
-
-    <video autoplay muted loop id="myVideo">
-  <source src="rain.mp4" type="video/mp4">
+<div class="videodiv">
+    <video width="100%" height="855" autoplay muted loop id="myVideo">
+  <source src="../../assets/backvideos/cloud_back.mp4" type="video/mp4">
 
 </video>
-</section>
-
+</div>
 <div class="footer" style="width:100%; height: 300px;margin-bottom: 0px;">
 
     <div class="container-fluid">
