--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -4,7 +4,7 @@ body {}
 
 header {
     padding: 2px 0;
-    background: #0055ff;
+    background: #008ae6;
     box-shadow: 0 4px 6px rgba(0, 0, 0, .2);
     position: fixed;
     width: 100%;
