--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,6 +6,7 @@
             </a>
         </div>
         <nav>
+            <i class="fa fa-bars"></i>
             <ul>
                 <li><a routerLink="">home</a></li>
                 <li><a href="">features</a></li>
@@ -13,6 +14,7 @@
                 <li><a routerLink="/dashboard">Dashboard</a></li>
 
                 <li><a routerLink="/login">login</a></li>
+
 
             </ul>
         </nav>
