--- a/src/app/form-upload/form-upload.component.css
+++ b/src/app/form-upload/form-upload.component.css
@@ -435,15 +435,18 @@ nav a:hover:after {
 }
 
 .wrapper {
-    background-color: #e6f5ff;
+    background-color: #b3e0ff;
     border-radius: 1rem;
     margin: 0 auto;
     max-width: 600px;
     padding: 2rem;
     width: 100%;
     z-index: 1;
-    border: 1px solid #BFBFBF;
-    box-shadow: 10px 10px 5px #aaaaaa;
+    box-shadow: 8px 8px 5px #aaaaaa;
+}
+
+.wrapper:hover {
+    box-shadow: 17px 17px 5px #aaaaaa;
 }
 
 .wrapperhead {
@@ -456,7 +459,9 @@ nav a:hover:after {
     font-size: 35px;
 }
 
+
 /* drag and drop */
+
 .uploadfilecontainer {
     background-image: url("../../assets/cloud-2044823_960_720.png");
     background-repeat: no-repeat;
