--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="container-login" style="background-image: url('../../assets/pictures/clouda.jpg'); ">
+<div class="container-login" style="background-color:#EBF7FB; width: 100%; height: 100vh; overflow:auto; ">
     <div class="wrap-login text-center" style="padding : 30px 55px 30px 55px; ">
 
 
@@ -55,7 +55,7 @@
                 <input type="number" class="form-control" id="exampleInputverifycode1" aria-describedby="verifyCodeHelp" placeholder="Enter the code" #verifycode>
                 <small id="emailHelp" class="form-text text-muted">Please enter the verification code that we sent to your email</small>
             </div>
-            
+
             <button type="button" class="btn btn-success form-control" (click)="onVerify(verifycode)">Verify</button>
 
         </div>
