--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
         <div class="wrapper" style="padding-top:0px">
             <div style="height:70px;"></div>
             <div class="nav-brand text-center" style="">
-                <p class="uploadlabel" style='margin-bottom:20px; text-align: center; color:#1a1aff; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>AWS Congnito Demo</p>
+                <p class="uploadlabel" style='margin-bottom:20px; text-align: center; color:#1a1aff; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>Dashboard</p>
             </div>
 
             <h5 class="text-center">Welcome, {{ uname }}</h5>
