--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,18 +1,28 @@
 <div style="background-color:#EBF7FB; width: 100%; height: 100vh; overflow:auto; ">
-    <div style="height:130px;"></div>
+    <div style="height:50px;"></div>
     <div class="wrapperhead" style="padding-top: 50px;">
-        <div class="wrapper" style="padding-top:0px">
-            <div style="height:70px;"></div>
+        <div class="wrapper" style="padding-top:10px">
+
             <div class="nav-brand text-center">
-                <p class="uploadlabel" style='margin-bottom:20px; text-align: center; color:#005ce6;font-weight: 600; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>Dashboard</p>
+                <p class="uploadlabel" style='margin-bottom:20px; text-align: center; color:#005ce6;font-weight: 650; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>Dashboard</p>
             </div>
 
-            <h5 class="text-center">Welcome, {{ uname }}</h5>
+            <h5 class="text-center" style="color:#004de6">Welcome, {{ uname }}</h5>
+
+
             <ul class="text-center" style="list-style-type: none;">
+
                 <li>
                     <a routerLink='/upload' class="uploadlink" style="margin-right: 30px;font-size: 20px;">Upload Files</a>
                 </li>
             </ul>
+
+        </div>
+        <div class="wrapper">
+            <div class="roundimg">
+                <img src="">
+
+            </div>
 
         </div>
     </div>
