--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,26 +4,24 @@
         <div class="wrapper" style="padding-top:10px">
 
             <div class="nav-brand text-center">
-                <p class="uploadlabel" style='margin-bottom:20px; text-align: center; color:#005ce6;font-weight: 650; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>Dashboard</p>
+                <p class="uploadlabel" style='margin-bottom:20px; text-align: center; color:#005ce6;font-weight: 650; font-size: 35px;text-shadow:2px 2px 2px #aaaaaa;'>Dashboard</p>
             </div>
 
-            <h5 class="text-center" style="color:#004de6">Welcome, {{ uname }}</h5>
+            <h5 class="text-center" style="color:#004de6 ;font-weight: 600;font-size: 25px;">Welcome, {{ uname }}</h5>
+            <div class="text-center" style="margin-top:10px ;margin-bottom: 10px;">
+                <img style="width: 200px; border-radius: 50%;" src='https://www.w3schools.com/howto/img_avatar.png'>
+
+            </div>
 
 
-            <ul class="text-center" style="list-style-type: none;">
-
+            <ul class="text-center" style="list-style-type: none;margin-top:20px">
+                <li><a routerLink='/user-profile' class="uploadlink" style="margin-right: 30px;font-size: 20px;"><button class="btn-2 uploadbutton" style="width:180px;height:50px;font-size:15px;border-radius: 1rem;">Edit profile</button></a></li>
                 <li>
-                    <a routerLink='/upload' class="uploadlink" style="margin-right: 30px;font-size: 20px;">Upload Files</a>
+                    <a routerLink='/upload' class="uploadlink" style="margin-right: 30px;font-size: 20px;"><button class="btn-2 uploadbutton" style="width:180px;height:50px;font-size:15px;border-radius: 1rem;">Upload Files</button></a>
                 </li>
             </ul>
 
         </div>
-        <div class="wrapper">
-            <div class="roundimg">
-                <img src="">
 
-            </div>
-
-        </div>
     </div>
     <div>
