--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -42,8 +42,6 @@ nav {
     padding: 0;
 }
 
-.btn-2:hover {}
-
 .uploadbutton:hover {
     background-color: #0033cc;
 }
@@ -104,4 +102,69 @@ nav {
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
     vertical-align: middle;
+}
+
+p {
+    font-family: Lato;
+}
+
+img {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+}
+
+.hoverable {
+    position: relative;
+    display: block;
+    cursor: pointer;
+    height: 200px;
+    width: 200px;
+    border: 5px solid #000;
+    border-radius: 50%;
+}
+
+.hoverable .hover-text {
+    position: absolute;
+    display: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.hoverable .background {
+    position: absolute;
+    display: none;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.5);
+    pointer-events: none;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.hoverable:hover .hover-text {
+    display: block;
+}
+
+.hoverable:hover .background {
+    display: block;
+}
+
+#fileInput {
+    display: none;
+}
+
+.info {
+    display: block;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+th {
+    color: #0066ff;
+    text-shadow: 2px 2px 3px #aaaaaa;
 }
