--- a/src/app/form-upload/form-upload.component.css
+++ b/src/app/form-upload/form-upload.component.css
@@ -497,3 +497,19 @@ nav a:hover:after {
 .files-list .delete-file img {
     width: 30px;
 }
+
+#progress {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 200px;
+    height: 10px;
+    background-image: white;
+    border-radius: 10px;
+}
+
+progress[value]::-webkit-progress-value {
+    background-image: -webkit-linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%), -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25)), -webkit-linear-gradient(left, #33adff, #0099ff);
+    border-radius: 2px;
+    background-size: 35px 20px, 100% 100%, 100% 100%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+}
