--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,12 +17,12 @@
 
             <ul>
                 <li><a routerLink="">home</a></li>
-                <li><a href="">features</a></li>
-                <li><a href="">contact</a></li>
+                <li><a routerLink="">contact</a></li>
                 <li><a routerLink="/dashboard">Dashboard</a></li>
-
+                <li *ngIf="logFlag"><a routerLink="/user-profile">Profile</a></li>
                 <li *ngIf="!logFlag"><a routerLink="/login">login</a></li>
                 <li *ngIf="logFlag"><a href="#" (click)="logout()">logout</a></li>
+
 
             </ul>
         </nav>
