--- a/src/app/details-upload/details-upload.component.html
+++ b/src/app/details-upload/details-upload.component.html
@@ -2,7 +2,7 @@
     <!--First,third condition for files-->
     <!--Second condition for immediate children-->
 
-    <div style="">
+    <div>
 
         <a href="{{fileUpload.url}}">{{fileUpload.name}} ({{fileUpload.size / 1000}} KB)</a><br/><br/>
         <button (click)="copyText(fileUpload.url)" style="margin-right: 10px;" class="btn btn-success">Share link</button>
