--- a/src/app/form-upload/form-upload.component.html
+++ b/src/app/form-upload/form-upload.component.html
@@ -6,7 +6,7 @@
         <div class="wrapperhead" style="padding-top: 10px;">
             <div class="wrapper">
 
-\                <div *ngIf="parent!=undefined" class="text-center">
+                <div *ngIf="parent!=undefined" class="text-center">
                     <h5
                         style="font-weight: 600;color: #004de6;font-size: 25px;text-shadow:2px 2px 2px #aaaaaa;margin-bottom: 20px;">
                         Current Directory: {{ parent }} </h5>
