--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,26 +1,37 @@
-<div class="content" style="z-index:0;">
-    <div class="content__container">
-        <p class="content__container__text">
-            The Last
-        </p>
+<div class="height:100px"></div>
 
-        <ul class="content__container__list">
-            <li class="content__container__list__item">File Syncing</li>
-            <li class="content__container__list__item">Data Privacy</li>
-            <li class="content__container__list__item">Cloud Collaboration</li>
-            <li class="content__container__list__item">File Sharing</li>
-        </ul>
+<div style="padding-top: 70px;" id="demo" class="carousel slide" data-ride="carousel">
 
+    <!-- Indicators -->
+    <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+    </ul>
+
+    <!-- The slideshow -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="../../assets/pictures/588a64e0d06f6719692a2d10.png" alt="Los Angeles" width="100%" height="700">
+        </div>
+        <div class="carousel-item">
+            <img src="../../assets/pictures/588a64c6d06f6719692a2d0c.png" alt="Chicago" width="100%" height="700">
+        </div>
+        <div class="carousel-item">
+            <img src="../../assets/pictures/sdpback1.png" alt="New York" width="100%" height="700">
+        </div>
     </div>
-</div>
-<p class="platform">Platform You'll Ever Need</p>
 
-<div class="videodiv">
-    <video width="100%" height="855" autoplay muted loop id="myVideo">
-  <source src="../../assets/backvideos/cloud_back.mp4" type="video/mp4">
-
-</video>
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
 </div>
+
+
 <div class="footer" style="width:100%; height: 300px;margin-bottom: 0px;">
 
     <div class="container-fluid">
