--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -4,11 +4,11 @@ body {}
 
 header {
     padding: 2px 0;
-    background: #008ae6;
     box-shadow: 0 4px 6px rgba(0, 0, 0, .2);
     position: fixed;
     width: 100%;
     z-index: 2;
+    background-image: linear-gradient(0deg, #2e5cb8, #3385ff);
 }
 
 .container {
